<resources>
    <string name="menu_settings" translatable="false">Settings</string>
    <string translatable="false" name="menu_search">Search</string>
    <string translatable="false" name="cancel">Cancel</string>
    <string translatable="false" name="set" translation_description="Button label. Set the date to the given value">Set</string>
    <string translatable="false" name="go">Go!</string>
    <string translatable="false" name="location_prefs">Location Settings</string>
    <string translatable="false" name="force_gps_pref">Always use GPS</string>
    <string translatable="false" name="force_gps_pref_hint" translation_description="this string continues from \'Always use GPS\'">if enabled, even if network location is available</string>
    <string translatable="false" name="no_use_gps_pref">Set location manually</string>
    <string translatable="false" name="no_use_gps_pref_hint">Enter a place or a lat/long below</string>
    <string translatable="false" name="location_placename">Place name</string>
    <string translatable="false" name="location_placename_hint" translation_description="An example address.  Translators: please pick an address suitable for your country.  If it has an astronomical connection (e.g. the address of an observatory or famous astronomer) then that would be even better.">e.g. 1400 West Mars Hill Road, Flagstaff, AZ.</string>
    <string translatable="false" name="location_lat_pref">Latitude</string>
    <string translatable="false" name="location_long_pref">Longitude</string>
    <string translatable="false" name="degrees" translation_description="angular degrees">Degrees</string>
    <string translatable="false" name="preferences">preferences</string>
    <string translatable="false" name="location_no_auto">Auto-location permission is disabled on your phone.   You can set the location manually in preferences.  Until then the map will be incorrect.</string>
    <string translatable="false" name="location_offer_to_enable">Auto-location is disabled.  Would you like to enable it?</string>
    <string translatable="false" name="location_offer_to_enable_gps_title">Auto-location disabled</string>
    <string translatable="false" name="location_set_auto">Location set from %1$s to %2$s</string>
    <string translatable="false" name="location_unable_to_geocode">Unable to decode your location - perhaps your network isn\'t available?</string>
    <string translatable="false" name="location_not_found_title" translation_description="dialog box title when location not found">Sorry</string>
    <string translatable="false" name="location_not_found" translation_description="dialog message when placename not found">%s not found.</string>
    <string translatable="false" name="location_long_lat">Longitude:%1$s, Latitude:%2$s</string>
    <string translatable="false" name="location_place_found">Place found.  Setting latitude %1$f and longitude %2$f</string>
    <string translatable="false" name="use_magnetic_correction">Use magnetic correction</string>
    <string translatable="false" name="use_magnetic_correction_hint">Use knowledge of your location to correct orientation from magnetic north to true north</string>
    <string translatable="false" name="provider_prefs" translation_description="Dialog box title for a preferences dialog">Show...</string>
    <string translatable="false" name="show_stars_pref">Stars</string>
    <string translatable="false" name="show_constellations_pref">Constellations</string>
    <string translatable="false" name="show_messier_objects_pref" translation_description="The celestial objects catalogued by Charles Messier">Messier Objects</string>
    <string translatable="false" name="show_planets_pref">Solar System</string>
    <string translatable="false" name="show_grid_pref">RA/Dec Grid</string>
    <string translatable="false" name="show_horizon_pref">Horizon</string>
    <string translatable="false" name="show_sky_gradient" translation_description="This is a shading of the color of the sky used for effect">Sky Gradient</string>
    <string translatable="false" name="show_meteors_pref">Meteor Showers</string>
    <string translatable="false" name="show_satellite_layer_pref" translation_description="The layer for satellites">Satellites</string>
    <string translatable="false" name="show_hubble_layer_pref">Hubble Images</string>
    <string translatable="false" name="sensor_prefs">Sensor Settings (experts)</string>
    <string translatable="false" name="sensor_speed" translation_description="Old, non gyro sensors only: How quickly the sensor should send us data">Sensor Speed</string>
    <string translatable="false" name="sensor_damping" translation_description="Old, non gyro sensors only: The amount of smoothing applied to the sensor outputs.">Damping</string>
    <string translatable="false" name="ecliptic">Ecliptic</string>
    <string translatable="false" name="malformed_loc_error">Latitude or longitude setting isn\'t a number.</string>
    <string translatable="false" name="dialog_accept" translation_description="accepting the licence agreement">Accept</string>
    <string translatable="false" name="dialog_decline" translation_description="declining the licence agreement">No Thanks</string>
    <string translatable="false" name="dialog_ok_button">OK</string>
    <string translatable="false" name="menu_help" translation_description="menu item to show \'Help\' box">Help</string>
    <string translatable="false" name="help_dialog_title">Help for Sky Map</string>
    <string translatable="false" name="eula_dialog_title">End User License Agreement</string>
    <string translatable="false" name="set_manual">Switching to manual mode</string>
    <string translatable="false" name="set_auto">Switching to automatic mode</string>
    <string translatable="false" name="menu_zoom_in">Zoom in</string>
    <string translatable="false" name="menu_zoom_out">Zoom out</string>
    <string translatable="false" name="menu_toggle_dim">Toggle night mode</string>
    <string translatable="false" name="zenith">ZENITH</string>
    <string translatable="false" name="nadir">NADIR</string>
    <string translatable="false" name="north">NORTH</string>
    <string translatable="false" name="east">EAST</string>
    <string translatable="false" name="west">WEST</string>
    <string translatable="false" name="south">SOUTH</string>
    <string translatable="false" name="search_label">Search the Sky</string>
    <string translatable="false" name="search_hint" translation_description="an example search target">e.g. Mars</string>
    <string translatable="false" name="no_search_title">No results</string>
    <string translatable="false" name="no_search_results_text">No results were found.</string>
    <string translatable="false" name="many_search_results_title">Did you mean?</string>
    <string translatable="false" name="many_search_results_text">Please select one</string>
    <string translatable="false" name="searching_for_text">Searching for %s...</string>
    <string translatable="false" name="found_target_text">Found %s.</string>
    <string translatable="false" name="other" translation_description="A preference category (ie preferences that don't belong in any other category)">Other</string>
    <string translatable="false" name="planetary_images">Show Planet Images</string>
    <string translatable="false" name="menu_time">Time Travel</string>
    <string translatable="false" name="time_travel_start_message">Traveling through time ...</string>
    <string translatable="false" name="time_travel_start_message_alt">Traveling through time to %s ...</string>
    <string translatable="false" name="time_travel_close_message">Back to the present ...</string>
    <string translatable="false" name="popular_dates_prompt" translation_description="Label for a list of dates the user can choose from">Popular dates</string>
    <string translatable="false" name="custom_date_prompt" translation_description="Label telling the user to manually specify a date">Or select your own date:</string>
    <string translatable="false" name="change_date_prompt">Change the date</string>
    <string translatable="false" name="change_time_prompt">Change the time</string>
    <string translatable="false" name="now_visiting"
            translation_description="used in time travel dialog to tell the user what time they are visiting, time formatted as yyyy.mm.dd at hh.mm.ss + timezone">
        Now visiting: %s</string>
    <string translatable="false" name="time_travel_label_past" translation_description="Label showing that we are in the past">Time Travel: Past</string>
    <string translatable="false" name="time_travel_label_future" translation_description="Label showing that we are in the future">Time Travel: Future</string>
    <string translatable="false" name="time_travel_stopped" translation_description="Label showing rate of travel through time">Time travel frozen</string>
    <string translatable="false" name="time_travel_second_speed" translation_description="Label showing rate of travel through time.  The symbol means greater than.">Traveling &gt; @ 1 sec/sec</string>
    <string translatable="false" name="time_travel_minute_speed" translation_description="Label showing rate of travel through time">Traveling &gt; @ 1 min/sec</string>
    <string translatable="false" name="time_travel_10minute_speed" translation_description="Label showing rate of travel through time">Traveling &gt; @ 10 min/sec</string>
    <string translatable="false" name="time_travel_hour_speed" translation_description="Label showing rate of travel through time">Traveling &gt; @ 1 hour/sec</string>
    <string translatable="false" name="time_travel_day_speed" translation_description="Label showing rate of travel through time">Traveling &gt; @ 1 day/sec</string>
    <string translatable="false" name="time_travel_week_speed" translation_description="Label showing rate of travel through time">Traveling &gt; @ 1 week/sec</string>
    <string translatable="false" name="time_travel_second_speed_back" translation_description="Label showing rate of travel through time">Traveling &lt; @ 1 sec/sec</string>
    <string translatable="false" name="capital">Capital:</string>
    <string translatable="false" name="photo_note">Photo Note:</string>
    <string translatable="false" name="note">Note: </string>
    <string translatable="false" name="save">Save</string>
    <string translatable="false" name="yes">Yes</string>
    <string translatable="false" name="no">No</string>
    <string translatable="false" name="pakistan">Pakistan</string>
    <string translatable="false" name="population">Population:</string>
    <string translatable="false" name="area">Area</string>
    <string translatable="false" name="currency">Currency:</string>
    <string translatable="false" name="country_list">Country List</string>
    <string translatable="false" name="quit">Quit ?</string>
    <string translatable="false" name="do_you_really_want_to_quit">Do you really want to quit ?</string>
    <string translatable="false" name="add_note">Add Note</string>
    <string translatable="false" name="loading">Loading..</string>
    <string translatable="false" name="feedback">Feedback</string>
    <string translatable="false" name="enter_your_topic_and_let_us_know_about_your_feedback">Enter your topic and let us know about your feedback.</string>
    <string translatable="false" name="enter_topic_here">Enter topic here</string>
    <string translatable="false" name="do_you_suggestion_or_found_some_bug_n_do_let_us_know_your_feedback">Do you suggest or found some bug and do let us know your feedback.</string>
    <string translatable="false" name="publish_feedback">Publish Feedback</string>
    <string translatable="false" name="write_your_suggestion">Write your suggestion</string>
</resources>