<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    android:id="@+id/bottomSheetNoteCam"
    android:padding="@dimen/fab_padding">

    <TextView
        android:id="@+id/textViewSavePhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_note"
        android:textColor="@color/pink"
        android:textSize="@dimen/padding_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@drawable/bg_gradient_pink"
        app:layout_constraintTop_toBottomOf="@id/textViewSavePhoto" />

    <TextView
        android:id="@+id/tvPhotoNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/photo_note"
        android:textColor="@color/pink"
        android:textSize="@dimen/fab_padding"
        app:layout_constraintTop_toBottomOf="@id/view" />

    <EditText
        android:id="@+id/etPhotoNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/note"
        android:textCursorDrawable="@drawable/cursor_pink"
        android:inputType="textMultiLine"
        android:overScrollMode="never"
        android:textColor="@color/black"
        android:background="@color/nothing"
        android:textColorHint="@color/gray_600"
        app:layout_constraintTop_toBottomOf="@id/tvPhotoNote" />

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@drawable/bg_gradient_pink"
        app:layout_constraintTop_toBottomOf="@id/etPhotoNote" />

    <TextView
        android:id="@+id/btnSavePhotoNote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_gradient_pink_rounded"
        android:padding="@dimen/fab_padding"
        android:text="@string/save"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_marginTop="@dimen/fab_padding"
        android:layout_marginEnd="@dimen/fab_padding"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

    <TextView
        android:id="@+id/btnCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_gradient_pink_rounded"
        android:gravity="center"
        android:padding="@dimen/fab_padding"
        android:layout_marginStart="@dimen/fab_padding"
        android:layout_marginTop="@dimen/fab_padding"
        android:text="@string/cancel"
        android:textSize="@dimen/_14sdp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/view1" />

</androidx.constraintlayout.widget.ConstraintLayout>