<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_gradient_pink_rounded"
    android:backgroundTint="@color/blue"
    android:layout_marginHorizontal="@dimen/extra_padding"
    android:orientation="vertical"
    android:padding="20dp">
    <ImageView
        android:id="@+id/btnClose"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="@dimen/less_padding"
        android:scaleType="fitCenter"
        android:layout_gravity="end"
        app:srcCompat="@drawable/ic_baseline_close_24"
        app:tint="@color/pink"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/feedback"
        android:textColor="@color/light_pink"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/padding"
        android:textColor="@color/white"
        android:text="@string/enter_your_topic_and_let_us_know_about_your_feedback"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:layout_editor_absoluteX="20dp" />

    <EditText
        android:id="@+id/etTopic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/fab_padding"
        android:layout_margin="1dp"
        android:hint="@string/enter_topic_here"
        android:maxLength="50"
        android:layout_marginTop="@dimen/extra_padding"
        android:focusable="auto"
        android:ems="10"
        android:textSize="15sp"
        android:textColor="@color/light_pink"
        android:textColorHint="@color/gray_700"
        android:background="@drawable/bg_search"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etFeedbackBody"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textColor="@color/white"
        android:padding="@dimen/fab_padding"
        android:layout_marginVertical="@dimen/less_padding"
        android:hint="@string/write_your_suggestion"
        android:ems="10"
        android:textSize="15sp"
        android:layout_marginTop="@dimen/extra_padding"
        android:textColorHint="@color/gray_700"
        android:background="@drawable/bg_search"
        android:inputType="textPersonName" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btnPublishFeedback"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="@dimen/padding"
        android:background="@drawable/bg_gradient_pink_rounded"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/publish_feedback"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:scaleType="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_navigate_next_24"
            tools:ignore="VectorDrawableCompat" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/do_you_suggestion_or_found_some_bug_n_do_let_us_know_your_feedback"
        android:layout_marginTop="@dimen/padding"
        android:textColor="@color/white"
        tools:layout_editor_absoluteX="20dp" />

</LinearLayout>