<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:id="@+id/clRoot"
    tools:context=".AmChartsActivity">


    <WebView
        android:id="@+id/webView"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:background="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btnBackViewWorld"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_nothing"
        android:padding="@dimen/fab_padding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24"
        app:tint="@color/white" />


    <CheckBox
        android:id="@+id/checkBoxCountryList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_nothing"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/fab_padding"
        android:checked="true"
        app:layout_constraintStart_toEndOf="@id/btnBackViewWorld"
        app:layout_constraintTop_toTopOf="@id/btnBackViewWorld"
        app:layout_constraintBottom_toBottomOf="@+id/btnBackViewWorld"
        android:text="@string/country_list" />

    <SearchView
        android:id="@+id/simpleSearchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/extra_padding"
        android:visibility="visible"
        android:background="@color/translucent_black"
        android:iconifiedByDefault="false"
        android:queryBackground="@android:color/transparent"
        android:queryHint="Search Country"
        android:theme="@style/FullscreenTheme"
        android:layout_marginTop="@dimen/extra_padding"
        app:layout_constraintTop_toBottomOf="@+id/clCountryInfo"
        app:layout_goneMarginTop="@dimen/fab_padding"
        tools:ignore="RtlSymmetry" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewCountryList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/extra_padding"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/simpleSearchView" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clCountryInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding"
        android:visibility="gone"
        android:background="@color/translucent_black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/flagCountryInfo"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_90sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:scaleType="centerInside"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/pk" />

        <TextView
            android:id="@+id/countryNameInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/flagCountryInfo"
            app:layout_constraintStart_toStartOf="@+id/flagCountryInfo"
            android:text="@string/pakistan" />

        <TextView
            android:id="@+id/countryCapitalInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/countryNameInfo"
            app:layout_constraintStart_toStartOf="@+id/flagCountryInfo"
            android:text="@string/capital" />

        <TextView
            android:id="@+id/countryPopulationInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/countryCapitalInfo"
            app:layout_constraintStart_toStartOf="@+id/flagCountryInfo"
            android:text="@string/population" />

        <TextView
            android:id="@+id/countryAreaInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/countryPopulationInfo"
            app:layout_constraintStart_toStartOf="@+id/flagCountryInfo"
            android:text="@string/area" />

        <TextView
            android:id="@+id/countryCurrencyInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/countryAreaInfo"
            app:layout_constraintStart_toStartOf="@+id/flagCountryInfo"
            android:text="@string/currency" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/llPBViewWorld"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="@dimen/fab_padding"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/white" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/loading"
            android:textColor="@color/white" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>